changed colors for CTO to ensure text color is consistent and is more visible on the image

--- a/styles.css
+++ b/styles.css
@@ -55,10 +55,10 @@ body, html {
     left: 50%;
     transform: translateX(-50%);
     width: 90%;
-    background: rgba(111, 111, 111, 0.5);
+    background: rgba(94, 94, 94, 0.5);
     padding: 10px 20px;
     font-size: 48px;
-    color: white;
+    color: skyblue;
     font-weight: bold;
     border-radius: 5px;
 }
